/**
 * Proto enums for client-side usage
 * These are duplicated from @proto/* to avoid importing gRPC code in the browser
 */

// ==========================================
// Products enums
// ==========================================

export enum TypeDocumentProduit {
  TYPE_DOCUMENT_PRODUIT_UNSPECIFIED = 0,
  TYPE_DOCUMENT_PRODUIT_DIPA = 1,
  TYPE_DOCUMENT_PRODUIT_CG = 2,
  TYPE_DOCUMENT_PRODUIT_CP = 3,
  TYPE_DOCUMENT_PRODUIT_TARIF = 4,
  TYPE_DOCUMENT_PRODUIT_SCRIPT = 5,
  TYPE_DOCUMENT_PRODUIT_MEDIA = 6,
}

export enum VisibilitePublication {
  VISIBILITE_PUBLICATION_UNSPECIFIED = 0,
  VISIBILITE_PUBLICATION_CACHE = 1,
  VISIBILITE_PUBLICATION_INTERNE = 2,
  VISIBILITE_PUBLICATION_PUBLIC = 3,
}

// ==========================================
// Commission enums
// ==========================================

export enum StatutRecurrence {
  STATUT_RECURRENCE_UNSPECIFIED = 0,
  STATUT_RECURRENCE_ACTIVE = 1,
  STATUT_RECURRENCE_SUSPENDUE = 2,
  STATUT_RECURRENCE_TERMINEE = 3,
  STATUT_RECURRENCE_ANNULEE = 4,
}

export enum StatutReport {
  STATUT_REPORT_UNSPECIFIED = 0,
  STATUT_REPORT_EN_COURS = 1,
  STATUT_REPORT_APURE = 2,
  STATUT_REPORT_ANNULE = 3,
}

export enum AuditScope {
  AUDIT_SCOPE_UNSPECIFIED = 0,
  AUDIT_SCOPE_COMMISSION = 1,
  AUDIT_SCOPE_RECURRENCE = 2,
  AUDIT_SCOPE_REPRISE = 3,
  AUDIT_SCOPE_REPORT = 4,
  AUDIT_SCOPE_BORDEREAU = 5,
  AUDIT_SCOPE_LIGNE = 6,
  AUDIT_SCOPE_BAREME = 7,
  AUDIT_SCOPE_PALIER = 8,
  AUDIT_SCOPE_ENGINE = 9,
}

export enum AuditAction {
  AUDIT_ACTION_UNSPECIFIED = 0,
  AUDIT_ACTION_COMMISSION_CALCULATED = 1,
  AUDIT_ACTION_COMMISSION_CREATED = 2,
  AUDIT_ACTION_COMMISSION_UPDATED = 3,
  AUDIT_ACTION_COMMISSION_DELETED = 4,
  AUDIT_ACTION_COMMISSION_STATUS_CHANGED = 5,
  AUDIT_ACTION_RECURRENCE_GENERATED = 6,
  AUDIT_ACTION_RECURRENCE_STOPPED = 7,
  AUDIT_ACTION_REPRISE_CREATED = 8,
  AUDIT_ACTION_REPRISE_APPLIED = 9,
  AUDIT_ACTION_REPRISE_CANCELLED = 10,
  AUDIT_ACTION_REPRISE_REGULARIZED = 11,
  AUDIT_ACTION_REPORT_NEGATIF_CREATED = 12,
  AUDIT_ACTION_REPORT_NEGATIF_APPLIED = 13,
  AUDIT_ACTION_REPORT_NEGATIF_CLEARED = 14,
  AUDIT_ACTION_BORDEREAU_CREATED = 15,
  AUDIT_ACTION_BORDEREAU_VALIDATED = 16,
  AUDIT_ACTION_BORDEREAU_EXPORTED = 17,
  AUDIT_ACTION_BORDEREAU_ARCHIVED = 18,
  AUDIT_ACTION_LIGNE_SELECTED = 19,
  AUDIT_ACTION_LIGNE_DESELECTED = 20,
  AUDIT_ACTION_LIGNE_VALIDATED = 21,
  AUDIT_ACTION_LIGNE_REJECTED = 22,
  AUDIT_ACTION_BAREME_CREATED = 23,
  AUDIT_ACTION_BAREME_UPDATED = 24,
  AUDIT_ACTION_BAREME_ACTIVATED = 25,
  AUDIT_ACTION_BAREME_DEACTIVATED = 26,
  AUDIT_ACTION_BAREME_VERSION_CREATED = 27,
  AUDIT_ACTION_PALIER_CREATED = 28,
  AUDIT_ACTION_PALIER_UPDATED = 29,
  AUDIT_ACTION_PALIER_DELETED = 30,
}
